--- a/index.html
+++ b/index.html
@@ -8,34 +8,45 @@
   
   <title>Frontend Mentor | Intro section with dropdown navigation</title>
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <div>
     <header>
-      <img src="images/logo.svg" alt="Image logo">
-      <nav>
-        Features
-        Company
-        Careers
-        About
+      <div>
+        <img class="logo" src="images/logo.svg" alt="Image logo">
+        <nav class="navigation">
+          <a href="#">Features <svg width="10" height="6" xmlns="http://www.w3.org/2000/svg"><path stroke="#686868" stroke-width="1.5" fill="none" d="m1 1 4 4 4-4"/></svg></a>
+
+          <a href="#">Company <svg width="10" height="6" xmlns="http://www.w3.org/2000/svg"><path stroke="#686868" stroke-width="1.5" fill="none" d="m1 1 4 4 4-4"/></svg></a>
+          
+          <a href="#">Careers</a>
+          <a href="#">About</a>
+        </div>
     
-        Login
-        Register
+        <div class="account">
+         <a href="">Login</a>
+         <button class="register">Register</button> 
+        </div>
       </nav>
     </header>
 
-    <h1>Make remote work</h1>
+    <!-- <section>
 
-    <p>
-      Get your team in sync, no matter your location. Streamline processes, 
-      create team rituals, and watch productivity soar.
-    </p>
+      <h1>Make remote work</h1>
 
-    <a href="#">Learn more</a> 
+      <p>
+       Get your team in sync, no matter your location. Streamline processes, 
+       create team rituals, and watch productivity soar.
+      </p>
 
-    <footer>All images here</footer>
-  </div>
+      <a href="#">Learn more</a> 
+
+      <footer>All images here</footer>
+  </section> -->
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
