--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </nav>
     </header>
 
-    <!-- <section>
+    <section>
 
       <h1>Make remote work</h1>
 
@@ -46,7 +46,8 @@
       <a href="#">Learn more</a> 
 
       <footer>All images here</footer>
-  </section> -->
+  </section>
+
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
