--- a/index.html
+++ b/index.html
@@ -35,17 +35,22 @@
     </header>
 
     <section>
+      <div>
+        <h1>Make remote work</h1>
 
-      <h1>Make remote work</h1>
+        <p>
+        Get your team in sync, no matter your location. Streamline processes, 
+        create team rituals, and watch productivity soar.
+        </p>
 
-      <p>
-       Get your team in sync, no matter your location. Streamline processes, 
-       create team rituals, and watch productivity soar.
-      </p>
+        <a href="#">Learn more</a> 
 
-      <a href="#">Learn more</a> 
+        <footer>All images here</footer>
+      </div>
 
-      <footer>All images here</footer>
+      <div>
+        <img src="images/image-hero-desktop.png" alt="">
+      </div>
   </section>
 
   <!-- <div class="attribution">
