Fixing HTML semantics

--- a/index.html
+++ b/index.html
@@ -34,24 +34,24 @@
       </nav>
     </header>
 
-    <section>
-      <div>
-        <h1>Make remote work</h1>
+    <main>
+      <section class="info">
+        <h1 class="title">Make remote work</h1>
 
-        <p>
-        Get your team in sync, no matter your location. Streamline processes, 
-        create team rituals, and watch productivity soar.
+        <p class="paragraph">
+          Get your team in sync, no matter your location. Streamline processes, 
+          create team rituals, and watch productivity soar.
         </p>
 
         <a href="#">Learn more</a> 
 
         <footer>All images here</footer>
-      </div>
+      </section>
 
-      <div>
-        <img src="images/image-hero-desktop.png" alt="">
-      </div>
-  </section>
+      <section>
+        <img class="image" src="images/image-hero-desktop.png" alt="">
+      </section>
+  </main>
 
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
