--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         <footer>All images here</footer>
       </section>
 
-      <section>
-        <img class="image" src="images/image-hero-desktop.png" alt="">
+      <section class="inside-image">
+        <img class="image" src="images/image-hero-desktop.png" alt="Image of website">
       </section>
   </main>
 
