Making the project

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           create team rituals, and watch productivity soar.
         </p>
 
-        <a href="#">Learn more</a> 
+        <a href="#" class="learn-more">Learn more</a> 
 
         <footer>All images here</footer>
       </section>
